version/0.24/_sources/api/solver/_autosummary/settings/complex_pole_series.rst.txt
:orphan:

.. _complex_pole_series:

complex_pole_series
===================

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.complex_pole_series.complex_pole_series
    :show-inheritance:

.. rubric:: Methods

========================================   ==========================================

Method                                                                        Summary

========================================   ==========================================
:ref:`list_properties <list_properties>`          List properties of selected object.

:ref:`resize <resize>`                         Set number of objects for list-object.

========================================   ==========================================

.. rubric:: Named object type

:ref:`complex_pole_series_child <complex_pole_series_child>`


.. rubric:: Included in:

=============================   =======================

Parent                                          Summary

=============================   =======================
:ref:`momentum <momentum>`          Help not available.

:ref:`momentum <momentum_1>`        Help not available.

:ref:`momentum <momentum_2>`        Help not available.

:ref:`momentum <momentum_3>`        Help not available.

:ref:`momentum <momentum_6>`        Help not available.

:ref:`momentum <momentum_8>`        Help not available.

:ref:`momentum <momentum_9>`        Help not available.

:ref:`momentum <momentum_10>`       Help not available.

=============================   =======================

